lengkapi visitor-site
halaman about, portfolio, experience, form leave a message

--- a/assets/visitor/css/main-style.css
+++ b/assets/visitor/css/main-style.css
@@ -5,7 +5,7 @@
  */
 body {
   /** background: url('../images/bg-black-texture.jpg') no-repeat center center fixed; */
-  background-color: black;
+  background-color: #494b4d;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
